--- a/src/index.css
+++ b/src/index.css
@@ -1115,6 +1115,9 @@ h6 {
   padding: 15px;
   margin-bottom: 24px;
 }
+.li{
+  background-color: red;
+}
 
 .contact .php-email-form .loading:before {
   content: "";
